# snake-rl

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-04-06-snake-dqn-design.md  2026-04-06-snake-dqn-implementation-plan.md  2026-04-06-snake-q-learning-design.md  2026-04-06-snake-q-learning-implementation-plan.md  2026-05-10-coursework-caption-conclusion-design.md  2026-05-10-coursework-caption-conclusion-implementation.md  2026-05-10-coursework-full-redesign-design.md  2026-05-10-coursework-full-redesign-implementation.md  2026-05-10-coursework-language-simplification-design.md  2026-05-10-coursework-language-simplification-implementation.md  2026-05-10-coursework-presentation-design.md  2026-05-10-coursework-presentation-implementation.md  2026-05-16-training-graph.md  2026-05-16-watch-metadata-design.md  2026-05-17-presentation-design.md  2026-05-17-presentation.md
overleaf-sync/: .olcli.json  Makefile  README-latex.md  latexmkrc  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.out  main.run.xml  main.tex  main.toc  presentation.aux  presentation.tex  references.bib
overleaf-sync/presentation/: speach.md
overleaf-sync/sections/: appendix.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  conclusion.tex  intro.tex
presentation/: presentation.aux  presentation.tex
presentation2/: presentation.tex
src/snake_rl/: __init__.py  agent.py  config.py  env.py  game.py  main.py  render.py  (+1 more)
tests/: test_agent.py  test_env.py  test_game.py  test_imports.py  test_latex_toc.py  test_main.py  test_render_import.py  test_train.py
(+1 files in other folders)
