[project]
name = "snake-rl"
version = "0.1.0"
description = "Snake game with a Q-learning agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snake_rl"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
